@@ -5,7 +5,9 @@ import ir.farzadafi.model.semantic.SemanticDockerInstruction;
 import org.springframework.stereotype.Component;
 
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Component
 public class AptGetUpdateAloneFixer implements DockerSmellFixer {
@@ -16,80 +18,123 @@ public class AptGetUpdateAloneFixer implements DockerSmellFixer {
         for (SemanticDockerInstruction ins : instructions) {
             if (shouldRemoveInstruction(ins))
                 continue;
-            if (shouldFixInstruction(ins)) {
-                result.add(fixInstruction(ins));
-                continue;
-            }
-            result.add(ins);
+            if (shouldFixInstruction(ins))
+                result.add(fixAptGetRun((RunInstruction) ins));
+            else
+                result.add(ins);
         }
         return result;
     }
 
     private boolean shouldRemoveInstruction(SemanticDockerInstruction ins) {
-        return isAptGetUpdateOnly(ins);
+        RunInstruction run = extractRun(ins);
+        if (run == null) return false;
+        return isAptGet(run) && isOnlyUpdate(run);
     }
 
     private boolean shouldFixInstruction(SemanticDockerInstruction ins) {
-        return isAptGetInstall(ins);
+        RunInstruction run = extractRun(ins);
+        if (run == null) return false;
+        return isAptGet(run) && hasInstall(run.arguments());
     }
 
-    private SemanticDockerInstruction fixInstruction(SemanticDockerInstruction ins) {
-        return addUpdateBeforeInstall((RunInstruction) ins);
-    }
-
-    private boolean isAptGetUpdateOnly(SemanticDockerInstruction ins) {
-        RunInstruction run = extractRunInstruction(ins);
-        if (run == null)
-            return false;
-        return isAptGetCommand(run) && isUpdateOnly(run);
-    }
-
-    private boolean isAptGetInstall(SemanticDockerInstruction ins) {
-        RunInstruction run = extractRunInstruction(ins);
-        if (run == null)
-            return false;
-        return isAptGetCommand(run) && containsInstall(run);
-    }
-
-    private RunInstruction extractRunInstruction(SemanticDockerInstruction ins) {
-        if (ins instanceof RunInstruction run)
-            return run;
-        return null;
-    }
-
-    private boolean isAptGetCommand(RunInstruction run) {
-        return run.executable().equals("apt-get");
-    }
-
-    private boolean isUpdateOnly(RunInstruction run) {
+    private RunInstruction fixAptGetRun(RunInstruction run) {
         List<String> args = run.arguments();
-        return args.size() == 1 && args.getFirst().equals("update");
-    }
+        List<String> subCommands = splitByAnd(args);
+        boolean hasUpdate = subCommands.stream().anyMatch(this::isUpdateSub);
+        boolean updateIsFirst = !subCommands.isEmpty() && isUpdateSub(subCommands.get(0));
+        List<String> fixedSubCommands = new ArrayList<>();
+        if (hasUpdate && updateIsFirst) {
+            for (String sub : subCommands) {
+                fixedSubCommands.add(fixTypoInSubCommand(sub));
+            }
+        } else if (hasUpdate) {
+            String updateSub = subCommands.stream().filter(this::isUpdateSub).findFirst().orElse("apt-get update");
+            List<String> otherSubs = subCommands.stream()
+                    .filter(s -> !isUpdateSub(s))
+                    .map(this::fixTypoInSubCommand)
+                    .toList();
+            fixedSubCommands.add(updateSub);
+            fixedSubCommands.addAll(otherSubs);
+        } else {
+            fixedSubCommands.add("apt-get update");
+            for (String sub : subCommands) {
+                fixedSubCommands.add(fixTypoInSubCommand(sub));
+            }
+        }
 
-    private boolean containsInstall(RunInstruction run) {
-        return run.arguments().contains("install");
-    }
-
-    private RunInstruction addUpdateBeforeInstall(RunInstruction run) {
-        if (alreadyHasUpdate(run))
-            return run;
-        return buildUpdatedRun(run);
-    }
-
-    private boolean alreadyHasUpdate(RunInstruction run) {
-        return run.arguments().contains("update");
-    }
-
-    private RunInstruction buildUpdatedRun(RunInstruction run) {
+        fixedSubCommands = fixedSubCommands.stream()
+                .filter(this::isValidSubCommand)
+                .collect(Collectors.toList());
+        if (fixedSubCommands.isEmpty())
+            return null;
         List<String> newArgs = new ArrayList<>();
-        newArgs.add("update");
-        newArgs.add("&&");
-        newArgs.add("apt-get");
-        newArgs.addAll(run.arguments());
-        return new RunInstruction(
-                run.executable(),
-                newArgs,
-                run.line()
-        );
+        for (int i = 0; i < fixedSubCommands.size(); i++) {
+            String fixedSub = fixedSubCommands.get(i).trim();
+            String[] parts = fixedSub.split("\\s+");
+            if (i > 0)
+                newArgs.add("&&");
+            if (i == 0 && parts.length > 0 && "apt-get".equals(parts[0]))
+                newArgs.addAll(Arrays.asList(parts).subList(1, parts.length));
+            else
+                newArgs.addAll(Arrays.asList(parts));
+        }
+        return new RunInstruction(run.executable(), newArgs, run.line());
+    }
+
+    private List<String> splitByAnd(List<String> args) {
+        List<String> subCommands = new ArrayList<>();
+        StringBuilder current = new StringBuilder();
+        for (String token : args) {
+            if ("&&".equals(token)) {
+                if (!current.isEmpty()) {
+                    subCommands.add(current.toString().trim());
+                    current = new StringBuilder();
+                }
+            } else {
+                if (!current.isEmpty()) current.append(" ");
+                current.append(token);
+            }
+        }
+        if (!current.isEmpty()) {
+            subCommands.add(current.toString().trim());
+        }
+        return subCommands;
+    }
+
+    private boolean isAptGet(RunInstruction run) {
+        return "apt-get".equals(run.executable());
+    }
+
+    private boolean isOnlyUpdate(RunInstruction run) {
+        List<String> a = run.arguments();
+        return a.size() == 1 && "update".equals(a.get(0));
+    }
+
+    private boolean hasInstall(List<String> args) {
+        return args.contains("install");
+    }
+
+    private boolean isUpdateSub(String sub) {
+        String trimmed = sub.trim().toLowerCase();
+        return trimmed.equals("update") || trimmed.equals("apt-get update");
+    }
+
+    private String fixTypoInSubCommand(String sub) {
+        String trimmed = sub.trim();
+        if (!trimmed.startsWith("apt-get") && (trimmed.startsWith("install") || trimmed.startsWith("update"))) {
+            return "apt-get " + trimmed;
+        }
+        return trimmed;
+    }
+
+    private boolean isValidSubCommand(String sub) {
+        String trimmed = sub.trim();
+        if (trimmed.isEmpty()) return false;
+        return !trimmed.equals("apt-get") && !trimmed.equals("install"); // ناقص
+    }
+
+    private RunInstruction extractRun(SemanticDockerInstruction ins) {
+        return ins instanceof RunInstruction ? (RunInstruction) ins : null;
     }
 }
